# rec

./: README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: api.rst  conf.py  index.rst  install.rst  tests.rst  tutorial.rst
examples/: decentral_run.py
rec/: feature.py  run.py  scenario.py
rec/observers/: __init__.py  base.py  file_observer.py  graph_observer.py  mariadb.py  mariadb_observer.py
tests/: test_file_observer.py  test_mariadb_observer.py  test_run_lifecycle.py
