[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rec"
description = "Robot Execution Catalog (REC) is a python library to manage data from robot runs"
dynamic = ["version"]
dependencies = [
    "click>=8.1.7",
    "dotenv",
    "mariadb"
]
requires-python = ">= 3.12"
readme = "README.md"
maintainers = [
  {name = "SECORO Group", email = "secoro@groups.uni-bremen.de"}
]

[project.optional-dependencies]
dev = ["black>=24.4.2"]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)

